k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: normaldance
  labels:
    name: normaldance
